@@ -1,3 +1,5 @@
+* Base journal cash report on account kind receivable and payable
+
 Version 5.0.1 - 2018-11-12
 * Bug fixes (see mercurial logs for details)
 
